--- a/Serralheria_prog.av/.classpath
+++ b/Serralheria_prog.av/.classpath
@@ -1,12 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="Script"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-16">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="lib" path="C:/Users/Thayane Lopes/Documents/Projeto Facul/FormularioFrequencia/WebContent/WEB-INF/lib/mysql-connector-java-5.1.17.jar">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="C:/Users/Thayane Lopes/Documents/Projeto Facul/FormularioFrequencia/WebContent/WEB-INF/lib/spring-context-4.0.3.RELEASE.jar">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
